--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
-APP_NAME=Laravel
+APP_NAME="Jet Server API"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+CLIENT_URL=http://localhost:3000
+
+#SANCTUM_STATEFUL_DOMAINS=
+
+SNOWFLAKE_INSTANCE=snowflake
+SNOWFLAKE_RESOLVER=laravel
+#SNOWFLAKE_DATACENTER=126
+#SNOWFLAKE_WORKER=22
+#SNOWFLAKE_MACHINE=6452
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +19,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=api
+DB_DATABASE=jetserver
 DB_USERNAME=root
 DB_PASSWORD=
 
